# handlers/friend_handler.go
@@ -15,6 +15,15 @@ func NewFriendHandler(friendService *services.FriendService) *FriendHandler {
 	return &FriendHandler{FriendService: friendService}
 }
 
+// @Summary Get friends
+// @Description Get friends
+// @Tags friends
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {array} models.Friend
+// @Failure 500 {string} string
+// @Router /friends [get]
 func (h *FriendHandler) HandleGetFriends(c *fiber.Ctx) error {
 	subID := c.Locals(models.SubIDContextKey).(string)
 
@@ -26,6 +35,16 @@ func (h *FriendHandler) HandleGetFriends(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(friends)
 }
 
+// @Summary Create friend
+// @Description Create friend
+// @Tags friends
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param subID path string true "Friend subID"
+// @Success 201 {string} string
+// @Failure 500 {string} string
+// @Router /friends/{subID} [post]
 func (h *FriendHandler) HandleCreateFriend(c *fiber.Ctx) error {
 	subID := c.Locals(models.SubIDContextKey).(string)
 	friendSubID := c.Params("subID")
@@ -38,6 +57,16 @@ func (h *FriendHandler) HandleCreateFriend(c *fiber.Ctx) error {
 	return c.SendStatus(fiber.StatusCreated)
 }
 
+// @Summary Delete friend
+// @Description Delete friend
+// @Tags friends
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param subID path string true "Friend subID"
+// @Success 204 {string} string
+// @Failure 500 {string} string
+// @Router /friends/{subID} [delete]
 func (h *FriendHandler) HandleDeleteFriend(c *fiber.Ctx) error {
 	subID := c.Locals(models.SubIDContextKey).(string)
 	friendSubID := c.Params("subID")
